--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vertree"
 version = "0.1.0"
-authors = ["Justin Sheehy <justin@iago.org",
+authors = ["Justin Sheehy <justin@iago.org>",
            "Andrew J. Stone <andrew.j.stone.1@gmail.com>"]
 description = "A persistent trie where each node is typed and versioned"
 repository = "https://github.com/justinsheehy/vertree"
