Switch to using serde for serialization
This does a number of things. First, it switches snapshotting
from manually implementing msgpack serialization to using
serde. This makes sure that the resulting snapshot is always
a valid msgpack file. Second, it updates all the crates to
the latest versions.

Closes #17 and #18.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ keywords = ["tree", "trie", "immutable", "persistent"]
 license = "Apache-2.0"
 
 [dependencies]
-error-chain = "0.8"
-rmp = "^0.7"
+error-chain = "0.10.0"
+rmp-serde = "0.13.3"
+serde = { version = "1.0.8", features = ["rc"] }
+serde_derive = "1.0.8"
 
 [dev-dependencies]
 assert_matches = "1.0"
-quickcheck = "0.3"
+quickcheck = "0.4.1"
 rand = "0.3"
